--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
+set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
+set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
 
 add_subdirectory(vendor/llama.cpp)
 
@@ -18,7 +20,7 @@ add_bare_module(llama)
 target_sources(
   ${llama}
   PRIVATE
-    binding.c
+    binding.cpp
 )
 
 target_include_directories(
@@ -26,10 +28,12 @@ target_include_directories(
   PRIVATE
     vendor/llama.cpp/include
     vendor/llama.cpp/ggml/include
+    vendor/llama.cpp/common
 )
 
 target_link_libraries(
   ${llama}
   PRIVATE
     llama
+    common
 )
