--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -1,38 +1,39 @@
 name: Prebuild
-
 on:
   workflow_dispatch:
-
 jobs:
   prebuild:
     strategy:
       matrix:
         include:
-          # Linux
           - os: ubuntu-22.04
             platform: linux
             arch: x64
           - os: ubuntu-22.04-arm
             platform: linux
             arch: arm64
-
-          # Android
+          - os: ubuntu-24.04
+            platform: android
+            arch: x64
+            flags: -D ANDROID_STL=c++_shared
+          - os: ubuntu-24.04
+            platform: android
+            arch: ia32
+            flags: -D ANDROID_STL=c++_shared
           - os: ubuntu-24.04
             platform: android
             arch: arm64
+            flags: -D ANDROID_STL=c++_shared
           - os: ubuntu-24.04
             platform: android
             arch: arm
-
-          # macOS
+            flags: -D ANDROID_STL=c++_shared
           - os: macos-14
             platform: darwin
             arch: x64
           - os: macos-14
             platform: darwin
             arch: arm64
-
-          # iOS
           - os: macos-14
             platform: ios
             arch: arm64
@@ -41,39 +42,50 @@ jobs:
             arch: arm64
             tags: -simulator
             flags: --simulator
-
-          # Windows
+          - os: macos-14
+            platform: ios
+            arch: x64
+            tags: -simulator
+            flags: --simulator
           - os: windows-2022
             platform: win32
             arch: x64
-
+          - os: windows-2022
+            platform: win32
+            arch: arm64
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.tags }}
-
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-
+      - run: |
+          sudo apt update
+          sudo apt install -y nasm
+        if: ${{ matrix.platform == 'linux' || matrix.platform == 'android' }}
+      - run: pip3 install meson
+        if: ${{ matrix.platform == 'linux' || matrix.platform == 'android' }}
+      - run: brew install meson nasm llvm@20
+        if: ${{ matrix.platform == 'darwin' || matrix.platform == 'ios' }}
+      - run: choco upgrade llvm
+        if: ${{ matrix.platform == 'win32' }}
+      - run: choco install --ignore-package-exit-codes meson nasm msys2
+        if: ${{ matrix.platform == 'win32' }}
+      - run: pacman --noconfirm -S git make ninja pkgconf
+        shell: C:\tools\msys64\usr\bin\bash.exe -e {0}
+        env:
+          PATH: C:\tools\msys64\usr\bin
+        if: ${{ matrix.platform == 'win32' }}
       - run: npm install -g bare-runtime bare-make
-
       - run: npm install
-
       - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} ${{ matrix.flags }}
-
       - run: bare-make build
-
       - run: bare-make install
-
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.tags }}
           path: prebuilds/*
-
   merge:
     runs-on: ubuntu-latest
     needs: prebuild
@@ -82,7 +94,6 @@ jobs:
         with:
           path: prebuilds
           merge-multiple: true
-
       - uses: actions/upload-artifact@v4
         with:
           name: prebuilds
