--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -57,6 +57,8 @@ jobs:
     name: ${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.tags }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
