This disables llguidance on iOS. Cross-compiling Rust to iOS requires setting up iOS targets (rustup target add aarch64-apple-ios etc.) and configuring Cargo for cross-compilation—that's a bigger undertaking. You can add it later if needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,13 @@ set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
-set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
 set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
+
+if(IOS)
+  set(LLAMA_LLGUIDANCE OFF CACHE BOOL "" FORCE)
+else()
+  set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
+endif()
 
 if(ANDROID)
   set(GGML_LLAMAFILE OFF CACHE BOOL "" FORCE)
