Now llguidance is disabled for both iOS and Android. Cross-compiling Rust requires extra toolchain setup that's not worth the complexity for an initial release.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
 set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
 set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
+set(LLAMA_HTTPLIB OFF CACHE BOOL "" FORCE)
 
-if(IOS)
+if(IOS OR ANDROID)
   set(LLAMA_LLGUIDANCE OFF CACHE BOOL "" FORCE)
 else()
   set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
