--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
 set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
 set(LLAMA_HTTPLIB OFF CACHE BOOL "" FORCE)
 
-if(IOS OR ANDROID)
+if(CMAKE_CROSSCOMPILING)
   set(LLAMA_LLGUIDANCE OFF CACHE BOOL "" FORCE)
 else()
   set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
