--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
 set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
 set(LLAMA_HTTPLIB OFF CACHE BOOL "" FORCE)
 
-if(CMAKE_CROSSCOMPILING)
+# llguidance requires Rust/Cargo - disable for cross-compilation
+if(CMAKE_SYSTEM_NAME STREQUAL "iOS" OR CMAKE_SYSTEM_NAME STREQUAL "Android")
   set(LLAMA_LLGUIDANCE OFF CACHE BOOL "" FORCE)
 else()
   set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)
