--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "prebuild:ios-sim-x64": "rm -rf build && bare-make generate --platform ios --arch x64 --simulator && bare-make build && bare-make install"
   },
   "devDependencies": {
+    "@huggingface/jinja": "^0.5.5",
     "bare-fs": "^4.5.3",
     "bare-os": "^3.6.2",
     "bare-path": "^3.0.0",
     "bare-signals": "^4.2.0",
     "cmake-bare": "^1.1.2",
-    "corestore": "^6.18.4",
-    "hyperdrive": "^11.12.0",
+    "corestore": "^7.7.0",
+    "hyperdrive": "^13.2.1",
     "hyperswarm": "^4.8.4",
     "paparam": "^1.10.0"
   }
