--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "prebuild:ios-sim-arm64": "rm -rf build && bare-make generate --platform ios --arch arm64 --simulator && bare-make build && bare-make install",
     "prebuild:ios-sim-x64": "rm -rf build && bare-make generate --platform ios --arch x64 --simulator && bare-make build && bare-make install"
   },
+  "dependencies": {
+    "bare-path": "^3.0.0"
+  },
   "devDependencies": {
     "@huggingface/jinja": "^0.5.5",
     "bare-fs": "^4.5.3",
