--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   ],
   "scripts": {
     "clean": "rm -rf build prebuilds",
+    "prepare": "bare-make generate && bare-make build && bare-make install",
+
     "update-llama": "git submodule update --remote vendor/llama.cpp",
-    "update": "npm run update-llama && npm run clean && npm run prebuild && npm run test",
     "test": "bare examples/regression-test.js",
-    "prebuild": "bare-make generate && bare-make build && bare-make install",
     "prebuild:ios": "npm run prebuild:ios-device && npm run prebuild:ios-sim-arm64 && npm run prebuild:ios-sim-x64",
     "prebuild:ios-device": "rm -rf build && bare-make generate --platform ios --arch arm64 && bare-make build && bare-make install",
     "prebuild:ios-sim-arm64": "rm -rf build && bare-make generate --platform ios --arch arm64 --simulator && bare-make build && bare-make install",
